# smart-news-crawler

./: .envrc  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: config.rs  main.rs  news_model.rs  serializers.rs
src/crawler/: client.rs  mappers.rs  mod.rs  models.rs
src/database/: mod.rs  models.rs
src/database/repositories/: article_repository.rs
src/redis/: client.rs
