[package]
name = "smart-news-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
