[package]
name = "smart-news-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
mongodb = "3.2.3"
redis = "0.32.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
